--- a/dependencies/Brewfile
+++ b/dependencies/Brewfile
@@ -1,8 +1,6 @@
 tap "homebrew/bundle"
 tap "homebrew/cask"
-tap "homebrew/cask-drivers"
 tap "homebrew/cask-fonts"
-tap "homebrew/cask-versions"
 tap "homebrew/core"
 tap "homebrew/services"
 
@@ -15,7 +13,7 @@ brew "mas"
 brew "neovim"
 brew "node"
 brew "postgresql", restart_service: true
-brew "python@3.8"
+brew "python@3.9"
 brew "redis", restart_service: true
 brew "ruby-install"
 brew "shellcheck"
@@ -28,6 +26,7 @@ brew "zsh-syntax-highlighting"
 
 cask "1password"
 cask "alfred"
+cask "caffeine"
 cask "discord"
 cask "firefox"
 cask "font-cascadia"
@@ -44,5 +43,6 @@ cask "slack"
 cask "spotify"
 cask "suspicious-package"
 cask "the-unarchiver"
+cask "tuple"
 cask "visual-studio-code"
 cask "zoom"
